crypto form,model,dataTable

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,12 +1,12 @@
-@import "vendor/bootstrap-extended.css";
-@import "vendor/components.css";
-@import "vendor/login-register.css";
+@import "vendor/material-vendors.min.css";
 @import "vendor/material.css";
-@import "vendor/material-colors.css";
+@import "vendor/components.css";
+@import "vendor/bootstrap-extended.css";
 @import "vendor/material-extended.css";
 @import "vendor/material-vertical-menu-modern.css";
 @import "vendor/photoswipe.css";
 @import "vendor/photoswipe-skin.css";
+
 
 $primary: #673ab7;
 
