--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -4,8 +4,6 @@
 @import "vendor/bootstrap-extended.css";
 @import "vendor/material-extended.css";
 @import "vendor/material-vertical-menu-modern.css";
-@import "vendor/photoswipe.css";
-@import "vendor/photoswipe-skin.css";
 
 $primary: #673ab7;
 
@@ -15,6 +13,10 @@ $primary: #673ab7;
             color: white;
         }
     }
+}
+
+.img-extendable {
+    cursor: pointer;
 }
 
 .form-group label {
@@ -68,5 +70,51 @@ table {
                 color: white;
             }
         }
+    }
+}
+
+.image-fullscreen {
+    display: none;
+    position: absolute;
+    z-index: 9999;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    top: 0;
+    left: 0;
+    background-size: contain;
+    background-repeat: no-repeat no-repeat;
+    background-position: center center;
+
+    &-gestion {
+        display: grid;
+
+        &-panel {
+            background: black;
+        }
+
+        &-image {
+            place-self: center;
+            margin-top: 50px;
+            width: 100%;
+            height: 100%;
+            overflow-x: auto;
+            overflow-y: auto;
+            @media (min-width: 768px) {
+                width: 50%;
+                height: 600px;
+            }
+
+            img {
+                place-self: center;
+                background-size: contain;
+                background-repeat: no-repeat no-repeat;
+                background-position: center center;
+                cursor: pointer;
+
+            }
+        }
+
     }
 }
