--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -92,6 +92,8 @@ table {
 
         &-panel {
             background: black;
+            position: fixed;
+            width: 100%;
         }
 
         &-image {
