--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -4,6 +4,7 @@
 @import "vendor/bootstrap-extended.css";
 @import "vendor/material-extended.css";
 @import "vendor/material-vertical-menu-modern.css";
+@import "vendor/select2.min.css";
 
 $primary: #673ab7;
 
@@ -123,6 +124,11 @@ table {
 
             }
         }
+    }
+}
+
+.select2 {
+    .select2-results {
 
     }
 }
